--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
+
+html,body{
+    margin:0px;
+    padding:0px;
+
+}
+body{
+ width: 100vw;
+ height: 100%;
+ background-color: #bed1cd;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: calc(100% - 100px);
+  margin-left: 10%;
+  margin-right: 10%;
+  width: calc(100% - 20%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.app__form {
+  box-sizing: border-box;
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+  z-index: 1;
+  background-color: #e9e9eb;
+  display: flex;
+  width: calc(100% - 80px);
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-bottom: 10px;
+  border-radius: 30px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__formControl {
+  display: flex !important;
+  width: 100%;
+  flex-direction: row !important;
+}
+.app__iconButton {
+  flex: 0;
+}
+.app__Input {
+  flex: 1;
+}
+.flipMove{
+  width: 100% !important;
 }
